--- a/0-Demo_Files/Nginx_Deployment_Prune/nginx-deployment-prune.yaml
+++ b/0-Demo_Files/Nginx_Deployment_Prune/nginx-deployment-prune.yaml
@@ -36,11 +36,12 @@ spec:
 
 ---
 
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: example-configmap
-  namespace: argocdappdemo
-data:
-  key1: value1
-  key2: value2
+
+# apiVersion: v1
+# kind: ConfigMap
+# metadata:
+#   name: example-configmap
+#   namespace: argocdappdemo
+# data:
+#   key1: value1
+#   key2: value2
